2013-01-21  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* dcrt0.cc (dll_crt0_1): Comment assumption.
	* exceptions.cc (sigpacket::setup_handler): Avoid sending signals
	during fork processing.

2013-01-21  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* dcrt0.cc (dll_crt0_1): Flag that we are working "incyg".  Handle any
	signals (presumably exiting signals) which may have come in while we
	are in the process of setting up.

2013-01-21  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* update-copyright: Recognize configure.ac scripts too.

2013-01-21  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* cygerrno.h (__reg3): Define.
	* cygmalloc.h (__reg3): Ditto.

2013-01-21  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* cygerrno.h: Conditionally define __regN for cygserver.

2013-01-20  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* malloc_wrapper.cc (malloc_init): Re-add inadvertently dropped comment
	which explains what's going on with the use_internal calculation.

2013-01-20  Christopher Faylor  <me.cygwin2013@cgf.cx>

	Throughout, update copyrights to reflect dates which correspond to
	main-branch checkins.  Regularize copyright format.

2013-01-20  Christopher Faylor  <me.cygwin2013@cgf.cx>

	Throughout, change __attribute__ ((regparm (N))) to just __regN.
	Throughout, (mainly in fhandler*) start fixing gcc 4.7.2 mismatch
	between regparm definitions and declarations.
	* gendef: Define some functions to take @ declaration to accommodate
	_regN defines which use __stdcall.
	* gentls_offsets: Define __regN macros as empty.
	* autoload.cc (wsock_init): Remove unneeded regparm attribute.
	* winsup.h (__reg1): Define.
	(__reg2): Define.
	(__reg3): Define.

	* advapi32.cc (DuplicateTokenEx): Coerce some initializers to avoid
	warnings from gcc 4.7.2.
	* exceptions.cc (status_info): Declare struct to use NTSTATUS.
	(cygwin_exception::dump_exception): Coerce e->ExceptionCode to
	NTSTATUS.
	* fhandler_clipboard.cc (cygnativeformat): Redefine as UINT to avoid