@@ -437,6 +437,11 @@ slashify (const char *src, char *dst, bool trailing_slash_p)
 void * __reg1
 __import_address (void *imp)
 {
+  if (*((uint16_t *) imp) != 0x25ff)
+    return NULL;
+  myfault efault;
+  if (efault.faulted ())
+    return NULL;
   const char *ptr = (const char *) imp;
   const uintptr_t *jmpto = (uintptr_t *) *((uintptr_t *) (ptr + 2));
   return (void *) *jmpto;
